Migrate all to Alpine 3.7

--- a/jekyll/Dockerfile
+++ b/jekyll/Dockerfile
@@ -1,27 +1,20 @@
-FROM ubuntu:18.04
+FROM alpine:3.7
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
-# Install Ruby, Bundler
-RUN apt-get update
-RUN apt-get -y install ruby bundler
-
-# Install various stuff that I've found some themes 
-# have needed in the past, like Git and cURL
-RUN apt-get -y install curl git
-
 # Environment
-WORKDIR /tmp
+WORKDIR /tmp/jekyll
 
-# Use apt to install any components which fail to install using
-# the Bundler command we're about to use below. (It might be
-# good to periodically review these, and see whether the version
-# available via Bundler is still broken.)
-RUN apt-get -y install ruby-nokogiri
+# Install Ruby and the build packages we need
+# (the ruby-dev package provides Ruby headers that will be used by some of the Gems pulled in by Bundler).
+# (zlib and zlib-dev are also required by some of the Gems, particularly Nokogiri)
+# (ruby-json prevents Jekyll from throwing a parsing error at build time)
+RUN apk update && \
+    apk add gcc g++ make ruby ruby-bundler ruby-dev ruby-json zlib zlib-dev
 
 # Install GitHub Pages
 ADD Gemfile /tmp/Gemfile
-RUN bundle install
-RUN rm -v /tmp/Gemfile && rm -v /tmp/Gemfile.lock
+RUN bundle install && \
+    rm -v /tmp/Gemfile /tmp/Gemfile.lock
 
 # Run
-ENTRYPOINT ["/bin/bash"]
+ENTRYPOINT ["/bin/sh"]
