--- a/tor/Dockerfile
+++ b/tor/Dockerfile
@@ -1,8 +1,9 @@
-FROM alpine
+FROM alpine:3.7
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
 # Install Tor and add our config
-RUN apk update && apk add tor
+RUN apk update && \
+    apk add tor
 ADD torrc /etc/tor/torrc
 
 # Environment
