--- a/transmission-daemon/Dockerfile
+++ b/transmission-daemon/Dockerfile
@@ -1,9 +1,11 @@
 FROM alpine:3.7
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
-# Install Transmission
+# Install transmission-daemon and shadow, then correct our user ID.
+## (The shadow package allows us to change the UID of the 'transmission' user).
 RUN apk update && \
-    apk add transmission-daemon
+    apk add transmission-daemon shadow && \
+    usermod -u 1000 transmission
 
 # Create config and download directories to mount into
 RUN mkdir -p /transmission/config && \
