--- a/tor/Dockerfile
+++ b/tor/Dockerfile
@@ -2,12 +2,9 @@ FROM alpine:3.7
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
 # Install Tor and add our config
-RUN apk update && \
-    apk add tor
+RUN apk update && apk add tor
 ADD torrc /etc/tor/torrc
 
-# Environment
-USER tor
-
 # Run
+USER tor
 ENTRYPOINT ["/usr/bin/tor"]
