--- a/onionscan/Dockerfile
+++ b/onionscan/Dockerfile
@@ -1,39 +1,45 @@
 FROM alpine:3.7
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
-# Environment
-# (sets variable to tell Go to install packages into
-# an area that's in our default $PATH.
+# Tell Go to install packages into an area that's in our default $PATH
 ENV GOPATH /usr/local
 
-# Install APK Deps, then Go Deps, then Onionscan itself
-RUN apk update && \
-    apk add build-base git go tor && \
-    go get github.com/HouzuoGuo/tiedot && \
-    go get golang.org/x/crypto/openpgp && \
-    go get golang.org/x/net/proxy && \
-    go get golang.org/x/net/html && \
-    go get github.com/rwcarlsen/goexif/exif && \
-    go get github.com/rwcarlsen/goexif/tiff && \
-    go get github.com/s-rah/onionscan
-
-# Configure Tor to run in the background
-RUN echo "RunAsDaemon 1" > /etc/tor/torrc
-
-# Add run script
+# Add startup script for OnionScan
 ADD start.sh /opt/start.sh
-RUN chmod +x /opt/start.sh
 
-# Run as the Tor user so we can actually launch
-# the Tor binary.
-RUN mkdir /opt/onionscan && chown -R tor /opt/onionscan
+RUN set -xe \
+    \
+# Install package dependencies
+    && apk update \
+    && apk add build-base git go tor \
+    \
+# Install Go dependencies
+    && go get github.com/HouzuoGuo/tiedot \
+    && go get golang.org/x/crypto/openpgp \
+    && go get golang.org/x/net/proxy \
+    && go get golang.org/x/net/html \
+    && go get github.com/rwcarlsen/goexif/exif \
+    && go get github.com/rwcarlsen/goexif/tiff \
+    \
+# Install OnionScan
+    && go get github.com/s-rah/onionscan \
+    \
+# Configure Tor to run in the background
+    && echo "RunAsDaemon 1" > /etc/tor/torrc \
+    \
+# Make startup script executable
+    && chmod +x /opt/start.sh \
+    \
+# Create a directory for us to execute OnionScan inside
+    && mkdir /opt/onionscan \
+    && chown -R tor /opt/onionscan
+
+# Set our workdir and run as the 'tor' user so we can launch the Tor binary
 WORKDIR /opt/onionscan
 USER tor
 
-# Entrypoint
-# (this script passes arguments given to the Docker command
-# straight to the OnionScan binary. If no argument is given
-# then CMD will apply and OnionScan will run a scan of the
-# DuckDuckGo hidden service).
+# Run
+# (This script passes arguments given to the Docker command straight to the OnionScan binary. If no argument
+# is given then the CMD will apply and OnionScan will run a scan of the DuckDuckGo hidden service).
 ENTRYPOINT ["/opt/start.sh"]
 CMD ["3g2upl4pq6kufc4m.onion"]
