--- a/texlive/Dockerfile
+++ b/texlive/Dockerfile
@@ -4,9 +4,14 @@ LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 # Setup Environment for Ubuntu
 ENV DEBIAN_FRONTEND noninteractive
 
+RUN set -xe \
+    \
 # Install TeX Live
-RUN apt-get update
-RUN apt-get -y install texlive-full
+    && apt-get update \
+    && apt-get -y install texlive-full \
+    \
+# Clear Apt cache
+    && apt-get clean
 
 # Run
 ENTRYPOINT ["/bin/bash"]
