Don't store package cache in Alpine containers (saves space)

--- a/jekyll/x86_64/Dockerfile
+++ b/jekyll/x86_64/Dockerfile
@@ -16,8 +16,7 @@ ADD Gemfile /tmp/Gemfile
 RUN set -xe \
     \
 # Install package dependencies
-    && apk update \
-    && apk add gcc g++ make ruby ruby-bundler ruby-dev ruby-json zlib zlib-dev \
+    && apk --no-cache add gcc g++ make ruby ruby-bundler ruby-dev ruby-json zlib zlib-dev \
     \
 # Install GitHub Pages
     && bundle install \
