--- a/massarchive/x86_64/Dockerfile
+++ b/massarchive/x86_64/Dockerfile
@@ -4,8 +4,7 @@ LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 RUN set -xe \
     \
 # Install Python and OpenSSL (OpenSSL is needed because the requests module uses it for HTTPS connections)
-    && apk update \
-    && apk add python2 py2-pip openssl \
+    && apk --no-cache add python2 py2-pip openssl \
     \
 # Add Python dependencies (For a list, see: https://github.com/motherboardgithub/mass_archive)
     && pip install requests archiveis
