--- a/transmission-daemon/x86_64/Dockerfile
+++ b/transmission-daemon/x86_64/Dockerfile
@@ -4,8 +4,7 @@ LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 RUN set -xe \
     \
 # Install transmission-daemon and shadow (shadow allows us to use 'usermod' and 'groupmod')
-    && apk update \
-    && apk add transmission-daemon shadow \
+    && apk --no-cache add transmission-daemon shadow \
     \
 # Modify the UID and GID of the automatically-enabled 'transmission' user and group to 1000
     && usermod -u 1000 transmission \
@@ -19,7 +18,10 @@ RUN set -xe \
     && echo "#!/bin/sh" > /transmission/start.sh \
     && echo "export TRANSMISSION_HOME='/transmission/config'" >> /transmission/start.sh \
     && echo "/usr/bin/transmission-daemon && sleep 999d" >> /transmission/start.sh \
-    && chmod +x /transmission/start.sh
+    && chmod +x /transmission/start.sh \
+    \
+# Remove shadow package to decrease attack surface
+    && apk del shadow
 
 # Run
 USER transmission
