--- a/tor/arm32v7/Dockerfile
+++ b/tor/arm32v7/Dockerfile
@@ -11,7 +11,11 @@ RUN set -xe \
     && echo "SOCKSPort 0.0.0.0:9250" > /etc/tor/torrc \
     \
 # Tell Tor to listen for DNS queries on UDP Port 5353
-    && echo "DNSPort 0.0.0.0:5353" >> /etc/tor/torrc
+    && echo "DNSPort 0.0.0.0:5353" >> /etc/tor/torrc \
+    \
+# Clear package cache to save space
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/
 
 # Run
 USER debian-tor
