--- a/transmission-daemon/x86_64/docker-compose.yml
+++ b/transmission-daemon/x86_64/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       - "31967:31967"
       - "31967:31967/udp"
     tmpfs:
-      - /run
-      - /tmp
+      - /var/log/transmission
     volumes:
       - /home/a/TransmissionConf/:/transmission/config/
       - /home/a/zpools/x/:/zpools/x/
