--- a/tor/arm32v7/docker-compose.yml
+++ b/tor/arm32v7/docker-compose.yml
@@ -1,13 +1,10 @@
-version: "3"
+version: '3.1'
+
 services:
-  transmission:
+
+  tor:
     image: alexhaydock/tor:arm32v7
     container_name: tor
-    cap_drop:
-      - ALL
     ports:
       - "5353:5353/udp"
-      - "9250:9250"
-    tmpfs:
-      - /run
-      - /tmp
+      - "9250:9050"
