--- a/youtube-dl/arm32v6/Dockerfile
+++ b/youtube-dl/arm32v6/Dockerfile
@@ -1,7 +1,7 @@
 # This container uses Alpine Edge to ensure that we always get the latest
 # version of youtube-dl, as YouTube change their site and APIs so often.
 
-FROM alpine:edge
+FROM arm32v6/alpine:edge
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
 RUN apk --no-cache add youtube-dl
