--- a/transmission-daemon/docker-compose.yml
+++ b/transmission-daemon/docker-compose.yml
@@ -1,5 +1,7 @@
-version: "3"
+version: "2.3"
+
 services:
+
   transmission:
     image: alexhaydock/transmission-daemon
     container_name: transmission
@@ -8,6 +10,7 @@ services:
     dns:
       - 1.1.1.1
       - 1.0.0.1
+    mem_limit: 2G
     ports:
       - "9091:9091"
       - "31967:31967"
@@ -15,5 +18,5 @@ services:
     tmpfs:
       - /var/log/transmission
     volumes:
-      - /home/a/TransmissionConf/:/transmission/config/
-      - /home/a/zpools/x/:/zpools/x/
+      - /home/a/TransmissionConf:/transmission/config
+      - /home/a/TransmissionDownloads:/transmission/downloads
