--- a/jekyll/x86_64/docker-compose.yml
+++ b/jekyll/x86_64/docker-compose.yml
@@ -1,8 +1,11 @@
-version: "3"
+version: "2.3"
+
 services:
+
   jekyll:
     image: alexhaydock/jekyll
     container_name: jekyll
+    mem_limit: 512M
     ports:
       - "4000:4000"
     volumes:
