--- a/chromium/x86_64/Dockerfile
+++ b/chromium/x86_64/Dockerfile
@@ -14,7 +14,7 @@ RUN set -xe \
     \
 # Add a package
     && apt-get -y install \
-          ca-certificates
+          ca-certificates \
           chromium \
           chromium-l10n \
           fonts-liberation \
