--- a/transmission-daemon/arm32v6/Dockerfile
+++ b/transmission-daemon/arm32v6/Dockerfile
@@ -1,6 +1,9 @@
 FROM arm32v6/alpine:3.8
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
+# Add Script
+COPY docker-entrypoint.sh /usr/bin/
+
 RUN set -xe \
     \
 # Install transmission-daemon and shadow (shadow allows us to use 'usermod' and 'groupmod')
@@ -14,11 +17,12 @@ RUN set -xe \
     && mkdir -p /transmission/config \
     && chmod -R 1777 /transmission \
     \
+# Make script executable
+    && chmod +x /usr/bin/docker-entrypoint.sh \
+    \
 # Cleanup
     && rm -rf /tmp/*
 
-# Add Script
-COPY docker-entrypoint.sh /usr/bin/
 
 # Run
 ENTRYPOINT ["/sbin/tini", "--", "/usr/bin/docker-entrypoint.sh"]
