--- a/tor/Dockerfile.arm32v6
+++ b/tor/Dockerfile.arm32v6
@@ -1,7 +1,7 @@
-FROM arm32v6/alpine:3.8
+FROM alpine:3.8
 LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
-ADD start.sh /opt/start.sh
+ADD docker-entrypoint.sh /usr/bin/docker-entrypoint.sh
 ADD torrc /etc/tor/torrc
 
 RUN set -xe \
@@ -10,9 +10,9 @@ RUN set -xe \
     && apk --no-cache add tor \
     \
 # Set permissions on script
-    && chmod +x /opt/start.sh
+    && chmod +x /usr/bin/docker-entrypoint.sh
 
 # Run
 ENV HOME "/var/lib/tor"
 WORKDIR ["/var/lib/tor"]
-ENTRYPOINT ["/opt/start.sh"]
+ENTRYPOINT ["/usr/bin/docker-entrypoint.sh"]
