--- a/rsync/Dockerfile
+++ b/rsync/Dockerfile
@@ -3,4 +3,4 @@ LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
 RUN apk --no-cache add rsync
 
-CMD [ "/usr/bin/rsync" ]
+ENTRYPOINT [ "/usr/bin/rsync" ]
