--- a/rsync/Dockerfile
+++ b/rsync/Dockerfile
@@ -3,12 +3,15 @@ LABEL maintainer "Alex Haydock <alex@alexhaydock.co.uk>"
 
 COPY docker-entrypoint.sh /usr/bin/
 
-RUN apk --no-cache add rsync openssh-client bash shadow sudo tini
-
+RUN apk --no-cache add rsync openssh-client bash shadow sudo tini \
+    \
 # Add 'user' user and group with IDs of 1000
-RUN addgroup -S user \
+    && addgroup -S user \
     && adduser -D -S -s /sbin/nologin -G user user \
     && usermod -u 1000 -o user \
-    && groupmod -g 1000 -o user
+    && groupmod -g 1000 -o user \
+    \
+# Make script executable
+    && chmod +x /usr/bin/docker-entrypoint.sh
 
 ENTRYPOINT [ "/sbin/tini", "--", "/usr/bin/docker-entrypoint.sh" ]
